sonar final cleanup